# roommate-share-bill-NP-complete

./: README.md  roommate-share-bill-NP-complete.cabal
data/: name.txt  transactions.txt
src/: Main.hs  ShareBill.hs
tests/: tests.hs
