name:                roommate-share-bill-NP-complete
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/xiongchenyu6/roommate-share-bill-NP-complete#readme
license:             BSD3
license-file:        LICENSE
author:              xiongchenyu6
maintainer:          xiongchenyu6@gmail.com
copyright:           2018 xiongchenyu6
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     ShareBill
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                       ,mtl
                      ,QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

executable roommate-share-bill-NP-complete
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       ShareBill
  build-depends:       base >= 4.7 && < 5
                       ,mtl
                       ,roommate-share-bill-NP-complete
                      ,QuickCheck

test-suite tests
  ghc-options:         -Wall -fwarn-tabs
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.7 && < 5
                      ,mtl
                      ,roommate-share-bill-NP-complete
                      ,QuickCheck
  default-language:    Haskell2010